# rooster

./: Cargo.toml
src/: main-rooster.rs
src/commands/: init.rs  mod.rs
