[package]
name = "rooster"
version = "2.7.0"
authors = ["Conrad Kleinespel <conradk@conradk.com>"]
license = "Apache-2.0"
repository = "https://github.com/conradkleinespel/rooster"
homepage = "https://github.com/conradkleinespel/rooster"
keywords = ["password", "security"]
description = "A simple password manager for geeks"

[dependencies]
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
rust-crypto = "0.2"
rand = "0.3"
libc = "0.2"
getopts = "0.2"
byteorder = "1.0"
clipboard = "0.3"
quale = "1.0"
shell-escape = "0.1"
rprompt = "1.0"

# change to v1.0 once the new version of rpassword has been tested and
# pushed to crates.io
rpassword = "0.4"

[[bin]]
name = "rooster"
path = "src/main-rooster.rs"
